# pkgs

./: .gitignore  README.md  ci.nix  compat.nix  default.nix  extend-lib.nix  flake.nix  overlay.nix  python-overrides.nix  pythonScope.nix  read-by-name.nix  scope.nix  with-cuda.nix
.github/workflows/: build-unfree.yml  build.yml  flakehub-publish-rolling.yml  nix-flake-update.yml  update.yml
datasets/: default.nix
datasets/modules/: datasets.nix  models.nix
lib/: extend-lib.nix
pkgs/: accelerate.nix  dali.nix  ezy-expecttest.nix  face-attribute-editing-stylegan3.nix  functorch.nix  galai.nix  geomstats.nix  geoopt.nix  gpytorch.nix  kornia.nix  parallelformers.nix  stylegan2.nix  trieste.nix
pkgs-py/by-name/im/imviz/: package.nix
pkgs-py/by-name/ma/mask-face-gan/: package.nix
pkgs/by-name/am/amumax/: package.nix
pkgs/by-name/cn/cnpyxx/: package.nix
pkgs/by-name/cp/cppcolormap/: package.nix
pkgs/by-name/cp/cprocsp/: components.nix  generic.nix  package.nix
pkgs/by-name/fa/faiss/: default.nix
pkgs/by-name/fe/fetch-torch-hub/: package.nix
pkgs/by-name/fe/fetchdata/: package.nix
pkgs/by-name/fe/fetchtimm/: package.nix
pkgs/datasette-plugins/: datasette-render-images.nix
pkgs/dearpygui/: default.nix
pkgs/faiss/: default.nix
pkgs/llama.cpp/: default.nix
pkgs/opensfm/: default.nix
pkgs/pyimgui/: default.nix
pkgs/python-packages/: extensions.nix  gpflow.nix  gpflux.nix  timm.nix
pkgs/python-packages/dearpygui/: default.nix
pkgs/python-packages/pyimgui/: default.nix
pkgs/quad-tree-attention/: default.nix  feature-matching.nix
pkgs/tfp/: 8.0.nix
pkgs/update-flake-outputs/: main.py
python-packages/by-name/co/comfy-ui/: 0001-main.py-add-an-entrypoint.patch  0002-comfy.model_management-fallback-to-cpu.patch  0003-tests-inference-guard-cuda-references.patch  0004-cli_args-add-extra-path.patch  0005-folder_paths-allow-overriding-base_path.patch  0006-folder_paths-in-temp-out-dirs-respect-overrides.patch  0007-cli_args-make-it-possible-to-see-the-final-args.patch  0008-options-os.environ-to-prevent-the-entrypoint-from-ig.patch  package.nix  pyproject.toml
python-packages/by-name/ed/edm/: package.nix  pyproject.toml
python-packages/by-name/gl/gluestick/: 0006-gluestick.run-main-allow-overriding-weights.patch  0007-gluestick.run-set_default_device-to-init-on-cuda.patch  package.nix  pyproject.toml
python-packages/by-name/pr/prefix-python-modules/: package.nix  prefix_python_modules.py  pyproject.toml
python-packages/by-name/st/stable-diffusion-webui/: 0001-modules.paths-try-PYTHONPATH-before-custom-search-pa.patch  0002-launch_utils-do-not-git-clone.patch  0003-paths_internal-just-use-the-relative-paths.patch  0004-sd_disable_initialization-the-https-huggingface.co-N.patch  0005-git-don-t-use-it.patch  0006-gradio-serve-module-files-undconditionally.patch  0007-gradio-just-use-abspaths.patch  0008-patch-out-the-sys.path-tampering.patch  package.nix  pyproject.toml
some-util/: default.nix  prefix-python-submodules.nix  types.nix
(+59 files in other folders)
