[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "stable-diffusion-webui"
version = "2023.11.6"

[project.scripts]
_sd-webui-launch = "sd_webui.launch:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sd_webui = [ "*.js", "*.css", "*.json"]
"sd_webui.configs" = [ "*.yaml" ]

[tool.setuptools.packages.find]
include = [ "sd_webui*" ]
